--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "nodemon ./src/index.ts",
-    "premium": "ts-node ./src/config/premium.ts"
+    "dev": "nodemon ./src/index.ts"
   },
   "keywords": [],
   "author": "",
