--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@ankr.com/ankr.js": "^0.1.9",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/coingecko-api": "^1.0.10",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.23",
     "@types/node-cron": "^3.0.4"
