--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
+    "ioredis": "^5.3.2",
     "mongoose": "^6.6.2",
     "node-cron": "^3.0.2",
     "ts-node": "^10.9.1",
@@ -27,7 +28,7 @@
     "@types/coingecko-api": "^1.0.10",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.14",
-    "@types/node": "^18.7.23",
+    "@types/node": "^18.15.11",
     "@types/node-cron": "^3.0.4"
   }
 }
